- Added support to redraw the charts on the overview page when the browser window is resized. - Cleaned up css for the overview page so the various widgets resize gracefully and don't overflow their bounds. - Added "overflow: hidden" to the postbox style to ensure widgets don't overflow their bounds.

--- a/assets/css/log.css
+++ b/assets/css/log.css
@@ -134,7 +134,17 @@
     float: left;
     overflow: hidden;
     white-space: nowrap;
-    width: 79%;
+	overflow: hidden;
+	text-overflow: ellipsis; 
+	width: 70%;
+}
+.log-page-title {
+    float: left;
+    overflow: hidden;
+    white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis; 
+	width: 100%;
 }
 .log-ip {
     direction: ltr;
@@ -142,7 +152,10 @@
     font-size: 10px;
     margin-bottom: 5px;
     white-space: pre;
-    width: 20%;
+	overflow: hidden;
+	text-overflow: ellipsis; 
+	width: 30%;
+	text-align: right;
 }
 .log-tools {
     float: left;
@@ -157,9 +170,14 @@
     font-size: 10px;
     margin: 0 0 0 2px;
     white-space: nowrap;
-    width: 85%;
+    width: 100%;
+	overflow: hidden;
+	text-overflow: ellipsis; 
 }
 .log-url img {
+}
+.postbox {
+	overflow: hidden;
 }
 #time_zone a {
     font-size: 11px;
